# concordium-local-chain

./: .gitignore  .pnp.cjs  DOCUMENTATION.md  README.md  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts.timestamp-1695032632746-55296bb907eb.mjs  vite.config.ts.timestamp-1695401411462-a584de6f0cbfa.mjs
.github/workflows/: main.yml
src/: App.css  App.tsx  index.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  install_concordium_debian.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  main.rs  old.rs  unix.rs  utils.rs  views.rs  windows.rs
src-tauri/src/views/: mod.rs
src/components/: BuildVersion.tsx  advanced-form.tsx  expert-form.tsx  form.tsx  forms.js  index.ts
