[package]
name = "concordium-lc1c"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = {version="0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
dirs = "3.0"
serde_json = "1.0"
nix = { version = "0.27.1", features = ["signal", "process"] }
concordium-rust-sdk = "3.0.1"
anyhow = "1.0.75"
clap = "4.4.2"
structopt = "0.3.26"
futures = "0.3.28"
log = "0.4.20"
package = "0.0.0"
toml = "0.5"
regex = "1.10.2"
ar = "0.9.0"
lzma-rs = "0.3.0"
tar = "0.4.40"
which = "5.0.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
